Fixed alternating row background in dark mode (#1003)
* Fixed alternating row background in dark mode
Cleaned up dark mode specific styling by using css selector

* Update frontend/src/components/MainToolbar.vue


* Update frontend/src/components/MainToolbar.vue


* added default value

--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -68,3 +68,11 @@
 .rounded-3 {
   border-radius: 8px;
 }
+
+.theme--light .alternate-row-background > div:nth-of-type(even) {
+  background-color: rgba(0, 0, 0, .02);
+}
+
+.theme--dark .alternate-row-background > div:nth-of-type(even) {
+  background-color: rgba(0, 0, 0, .2);
+}
